feat: improve repository test: chatroom create, join, read, delete